# aula-rgb-controller

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  README.tr.md  setup.sh
cli/: CMakeLists.txt
cli/src/: main.c
configs/sensor/: developer.json  gamer.json  system.json
daemon/: CMakeLists.txt
daemon/src/: dbus_interface.c  dbus_interface.h  device_manager.c  device_manager.h  effect_manager.c  effect_manager.h  error_history.c  error_history.h  idle_monitor.c  idle_monitor.h  main.c  profile_manager.c  profile_manager.h
dbus/: org.f87.Control.service  org.f87.Control.service.in
docs/plans/: 2026-03-27-f87control-design.md  2026-03-27-f87control-implementation.md
docs/superpowers/plans/: 2026-03-28-sw-effects-music-reactive.md  2026-03-29-daemon-implementation.md  2026-03-29-gtk4-gui.md  2026-03-29-profiles-implementation.md  2026-03-29-sensor-heatmap.md  2026-03-30-error-collection.md  2026-03-30-gui-overhaul-i18n.md  2026-03-30-sensor-ui-redesign.md
docs/superpowers/specs/: 2026-03-28-sw-effects-music-reactive-design.md  2026-03-29-daemon-design.md  2026-03-29-gtk4-gui-design.md  2026-03-29-profiles-design.md  2026-03-29-sensor-heatmap-design.md  2026-03-30-error-collection-design.md  2026-03-30-gui-controls-i18n-design.md  2026-03-30-sensor-ui-redesign.md
gui/: CMakeLists.txt
gui/resources/: f87control.gresource.xml  org.f87.Control.desktop  style.css
gui/src/: app_state.c  app_state.h  controls.c  controls.h  effect_meta.c  effect_meta.h  i18n.c  i18n.h  keyboard_view.c  keyboard_view.h  main.c  preview.c  preview.h  sensor_editor.c  sensor_editor.h  sidebar.c  sidebar.h  window.c  window.h
lib/: CMakeLists.txt
lib/include/f87/: animate.h  audio_types.h  client.h  device.h  effects.h  f87.h  lighting.h  logger.h
lib/src/: animate.c  animate_internal.h  audio.c  client.c  device.c  effects.c  effects_sw.c  effects_sw_reactive.c  lighting.c  logger.c  protocol.c  protocol.h  ring_buffer.c  ring_buffer.h  sensor.c  sensor.h  sensor_config.c  sensor_config.h  spectrum.c  spectrum.h  visualizer.c
po/: POTFILES.in  f87control.pot  tr.po
systemd/: f87d.service  f87d.service.in
tests/: test_daemon.c  test_device.c  test_error_history.c  test_logger.c  test_profile.c  test_ring_buffer.c  test_sensor.c  test_sensor_config.c  test_spectrum.c
tools/: analyze.bat  analyze3.py  analyze3b.py  analyze_capture.py  anim_debug.c  capture.bat  capture.pcap  capture2.bat  capture2.pcap  capture3.bat  capture3.pcap  cmd_scan.c  compare_captures.py  decode_packets.py  deep_analysis.py  effect_test.c  hidraw_test.c  pcap_parser.py  proto_probe.c  protocol_notes.md  psd_test.c  settings_check.c  usbcap_list.bat
udev/: 99-f87.rules
